--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-    "semi": false,
+    "semi": true,
     "tabWidth": 4,
     "trailingComma": "es5",
     "singleQuote": false,
     "printWidth": 150,
-    "endOfLine": "lf"
+    "endOfLine": "lf",
+    "arrowParens": "avoid"
 }
