--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "react",
-  "version": "1.0.0",
-  "description": "this is a react learning repo",
-  "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html",
-    "test": "jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Tech-CK16/react.git"
-  },
-  "keywords": [],
-  "author": "Akshay Saini",
-  "license": "ISC",
-  "devDependencies": {  
-    "parcel": "^2.11.0",
-    "process": "^0.11.10"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "browserslist": [
-    "last 2 versions"
-  ]
+    "name": "react",
+    "version": "1.0.0",
+    "description": "this is a react learning repo",
+    "scripts": {
+        "start": "parcel index.html",
+        "build": "parcel build index.html",
+        "test": "jest"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Tech-CK16/react.git"
+    },
+    "keywords": [],
+    "author": "Akshay Saini",
+    "license": "ISC",
+    "devDependencies": {
+        "parcel": "^2.11.0",
+        "process": "^0.11.10"
+    },
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.23.1"
+    },
+    "browserslist": [
+        "last 2 versions"
+    ]
 }
